before index delete

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,14 +2,15 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>A little poem</title>
+        <title>A little poem about colors</title>
     </head>
     <body>
-       <p>I am fast and fun. <br>
-        I can dream, dreams that nobody has dreamt before. <br>
-        I would go on adventures all over the world. <br>
-        I want to write out my imagination. <br>
-        I enjoy seeing peace.</p>
-        <a href="color.jsp">What is your favourite color?</a>
+       <p>I love color. <br>
+           I love flaming reds, <br>
+           And vivid greens, <br>
+           And royal flaunting purples. <br>
+           I love the startled rose of the sun at dawning, <br>
+           And the blazing orange of it at twilight.</p>
+        <a href="../ru/colorproject/controller/EditColor.jsp">What is your favourite color?</a>
     </body>
 </html>
